test/expected/declare_fmo_star_rk_rk.out
struct S; declare * as friend member operator (reference to S) returning ref...
         ^
10: error: operator overloading is not supported in C
